--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <% if current_user %>
 <h4><%= current_user.user_name %></h4>
   <form action="<%= session_url(current_user) %>" method="post">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
     <input type="hidden" name="_method" value="delete">
     <input type="submit" value="Log out!">
   </form>
