--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= render "shared/errors" %>
 <form action="<%= users_url %>" method="post">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
   <label>Username:</label>
   <input type="text" name="user[user_name]" value="">
   <br>
